--- a/Tempo2/FieldDetailView.xaml
+++ b/Tempo2/FieldDetailView.xaml
@@ -29,7 +29,14 @@
                                      IsSubheading="{x:Bind IsNested, Mode=OneWay}" 
                                      />
 
+                <TextBlock Visibility="{x:Bind FieldVM.IsExperimental, Mode=OneWay}"
+                       Margin="{StaticResource BottomVerticalMargin}"
+                       Foreground="Red"
+                       >(Experimental)</TextBlock>
+
+
                 <TextBlock Margin="{StaticResource VerticalMargin}"
+                           local:CollapseIfEmpty.IsEnabled="True"
                            Text="{x:Bind FieldVM.ApiDescriptionAsync, Mode=OneWay}" TextWrapping="Wrap"  IsTextSelectionEnabled="True"/>
 
                 <!-- Horizontal line -->
@@ -45,8 +52,15 @@
                     <local:StackListHeaderItem>Version</local:StackListHeaderItem>
                     <local:BuildNumberText MemberVM="{x:Bind FieldVM, Mode=OneWay}" />
                     <TextBlock Text="{x:Bind FieldVM.Contract, Mode=OneWay}" />
-
                 </StackPanel>
+
+                <StackPanel local:CollapseIfEmpty.IsEnabledFor="{x:Bind _attributesView}">
+                    <local:StackListHeaderItem >Attributes</local:StackListHeaderItem>
+                    <local:AttributesView2 
+                        x:Name="_attributesView"
+                        AttributeTypeInfos="{x:Bind local:AttributeTypeInfo.WrapCustomAttributes(FieldVM.NonWinmdCustomAttributes), Mode=OneWay}"/>
+                </StackPanel>
+
             </StackPanel>
         </ScrollViewer>
 
