--- a/Tempo2/TypeDetailView.xaml
+++ b/Tempo2/TypeDetailView.xaml
@@ -52,7 +52,7 @@
 
             <Border x:Name="_wideModeCol0" Padding="0">
                 <!-- This starts out here, but in skinny mode will get moved to _skinnyModeCol0 -->
-                <local:TypeDetailPageMembersList 
+                <local:TypeDetailViewMembersList 
                     Navigated="_membersList_Navigated"
                     x:Name="_membersList" 
                     TypeVM="{x:Bind TypeVM, Mode=OneWay}" 
@@ -61,7 +61,7 @@
 
             <Border x:Name="_wideModeCol1" Grid.Column="1" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                 <!-- This starts out here, but in skinny mode will get moved to _skinnyModeCol1 -->
-                <local:TypeDetailPageTypeInfo x:Name="_typeInfo"  TypeVM="{x:Bind TypeVM, Mode=OneWay}"  />
+                <local:TypeDetailViewTypeInfo x:Name="_typeInfo"  TypeVM="{x:Bind TypeVM, Mode=OneWay}"  />
             </Border>
         </Grid>
 
