Add a help window

--- a/Tempo2/CommonCommandBar.xaml
+++ b/Tempo2/CommonCommandBar.xaml
@@ -121,6 +121,12 @@
                     </MenuFlyout>
                 </AppBarButton.Flyout>
             </AppBarButton>
+            
+            <AppBarButton Label="Help" Icon="Help" Click="ShowHelp">
+                <AppBarButton.KeyboardAccelerators>
+                    <KeyboardAccelerator Key="F1"/>
+                </AppBarButton.KeyboardAccelerators>
+            </AppBarButton>
         </CommandBar>
     </Grid>
 
