--- a/Tempo2/TypeDetailViewTypeInfo.xaml
+++ b/Tempo2/TypeDetailViewTypeInfo.xaml
@@ -96,7 +96,7 @@
                     <local:StackListHeaderItem >Returned by</local:StackListHeaderItem>
                     <ItemsControl ItemsSource="{x:Bind TypeVM.ReturnedByAsync, Mode=OneWay}" x:Name="_returnedByItemsControl">
                         <ItemsControl.ItemTemplate>
-                            <DataTemplate x:DataType="local:MemberViewModel">
+                            <DataTemplate x:DataType="local:MemberOrTypeViewModelBase">
                                 <TextBlock local:CsSyntaxGenerator.MemberName="{x:Bind Mode=OneWay}" TextWrapping="Wrap" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
