--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -51,6 +51,7 @@
                                 <TextBlock>^button</TextBlock>
                                 <TextBlock>button$</TextBlock>
                                 <TextBlock>but::cli</TextBlock>
+                                <TextBlock>button Namespace:controls</TextBlock>
                                 <!--<TextBlock xml:space="preserve">check     box</TextBlock>-->
                                 <TextBlock>iasync&lt;storagefile</TextBlock>
                             </StackPanel>
